[gd_scene load_steps=2 format=3 uid="uid://6lyoao2285y6"]

[ext_resource type="Script" path="res://lobby.gd" id="1_g2d2t"]

[node name="Lobby" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2d2t")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PlayerContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StartGameButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="StartGameButton" to="." method="_on_start_game_button_pressed"]
